--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,11 +20,11 @@
         - name: Include check tasks
           ansible.builtin.include_tasks: checks.yml
 
-        - name: Include remove broken symlinks and delete /dev/null links tasks
+        - name: Include remove broken symlinks
           ansible.builtin.include_tasks: fix_files.yml
-          when: >-
-            ( ( systemd_delete_broken_symlinks | bool ) and ( systemd_broken_symlinks is defined ) ) or
-            ( ( systemd_delete_devnull_symlinks | bool ) and ( systemd_devnull_symlinks is defined ) )
+          when:
+            - systemd_broken_symlinks is defined
+            - systemd_delete_broken_symlinks | bool
 
         - name: Debug systemd unit config
           ansible.builtin.debug:
