add verification of vars using the arg spec

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ before_script:
   - molecule --version
 stages:
   - bookworm
-  # - jammy
+  - forky
   - noble
   - trixie
 bookworm:
@@ -46,13 +46,13 @@ bookworm:
     - pre-commit install
     - pre-commit run --all-files
     - molecule test --all
-# jammy:
-#   image: registry.git.coop/webarch/containers/images/jammy:20250907
-#   stage: jammy
-#   script:
-#     - pre-commit install
-#     - pre-commit run --all-files
-#     - molecule test --all
+forky:
+  image: registry.git.coop/webarch/containers/images/forky:20250916
+  stage: forky
+  script:
+    - pre-commit install
+    - pre-commit run --all-files
+    - molecule test --all
 noble:
   image: registry.git.coop/webarch/containers/images/noble:20250916
   stage: noble
