--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,7 @@ systemd: true
 systemd_delete_broken_symlinks: false
 systemd_timesyncd_reboot: false
 systemd_tz: Etc/UTC
+systemd_verify: true
 # systemd_units:
 #   - name: systemd-timesyncd
 #     files:
