--- a/tasks/file_edited.yml
+++ b/tasks/file_edited.yml
@@ -33,6 +33,8 @@
         owner: root
         group: root
         remote_src: true
+      vars:
+        systemd_file_backup: "{{ systemd_file.path | ansible.builtin.dirname }}/.{{ systemd_file.path | ansible.builtin.basename }}.{{ ansible_facts.date_time.iso8601_basic_short }}.bak"
       when: systemd_file.conf != systemd_file_vars
 
     - name: Comment block present
@@ -41,7 +43,7 @@
         - name: Ansible managed comment absent from the top of the file
           ansible.builtin.lineinfile:
             path: "{{ systemd_file.path }}"
-            line: "# {{ systemd_ansible_managed }}"
+            line: "# {{ ansible_managed }}"
             state: absent
             mode: "0644"
             owner: root
@@ -63,7 +65,7 @@
     - name: Ansible managed comment present at the top of the file
       ansible.builtin.lineinfile:
         path: "{{ systemd_file.path }}"
-        line: "# {{ systemd_ansible_managed }}"
+        line: "# {{ ansible_managed }}"
         state: present
         insertbefore: BOF
         mode: "0644"
