--- a/tasks/file_masked.yml
+++ b/tasks/file_masked.yml
@@ -8,7 +8,7 @@
 #
 # You should have received a copy of the GNU General Public License along with the Webarchitects systemd Ansible role. If not, see <https://www.gnu.org/licenses/>.
 ---
-- name: Systemd unit file absent
+- name: Systemd unit file masked
   block:
 
     - name: Debug the systemd unit file variables
@@ -57,21 +57,16 @@
       register: systemd_file_masked
       when: not systemd_file_state.state.exists | bool
 
-    - name: Systemd unit file masked when the file did exist
-      ansible.builtin.file:
-        state: link
-        src: /dev/null
-        dest: "{{ systemd_file.path }}"
-        follow: false
-        force: true
-        mode: "0777"
-        owner: root
-        group: root
-      register: systemd_file_masked
-      when:
-        - systemd_file_state.stat is defined
-        - (systemd_file_state.stat.islnk is defined) and (not systemd_file_state.stat.islnk | bool)
-        - (systemd_file_state.lnk_source is defined) and (systemd_file_state.lnk_source != "/dev/null")
+    - name: Systemd unit file masked when the file existed
+      ansible.builtin.include_tasks: existing_file_masked.yml
+      when: systemd_file_state.state.exists | bool
+
+    - name: Debug systemd_file_masked
+      ansible.builtin.debug:
+        var: systemd_file_masked
+        verbosity: "{% if ansible_check_mode | bool or ansible_diff_mode | bool %}0{% else %}1{% endif %}"
+      tags:
+        - debug
 
     - name: Systemd daemon-reload
       ansible.builtin.systemd_service:
