--- a/tasks/file_masked.yml
+++ b/tasks/file_masked.yml
@@ -56,9 +56,9 @@
         group: root
       register: systemd_file_masked
       when: >-
-        (not systemd_file_state.state.exists | bool) or
+        (not systemd_file_state.stat.exists | bool) or
         ((not systemd_file_state.stat.islnk | bool) and
-        (systemd_file_state.lnk_source != "/dev/null"))
+        (systemd_file_state.stat.lnk_source != "/dev/null"))
 #      when: not systemd_file_state.state.exists | bool
 
 #     - name: Systemd unit file masked when the file existed
